2004-03-04  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added sr@ije to ALL_LINGUAS.

2004-02-24  Michael Meeks  <michael@ximian.com>

	* Version 2.5.3.

2004-02-16  Arvind Samptur <arvind.samptur@wipro.com>

	* bonobo/bonobo-window.c: (bonobo_window_class_init): upd.
	(bonobo_window_focus): bin: always was a bad idea.
	
2004-02-18  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-dock-item.c (check_guint_arg): 
	add pre-condition.
	(get_preferred_height, get_preferred_width): return 0
	if we have no child; odd.

2004-02-07  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-01-25  Jody Goldberg <jody@gnome.org>

	* bonobo/bonobo-dock-* : revert the use of the G_DEFINE_TYPE macros
	  until the new typename prefixed versions are put into a release.
	  right now CVS prefixes, and 2.3.2 does not, but cvs has not yet
	  bumped it version.  Which makes a mess.

2004-01-25  Michael Meeks  <michael@ximian.com>

	* bonobo/*.c: add #include "config.h"s where they
	were missing - thanks to Morten.

2004-01-23  Jody Goldberg <jody@gnome.org>

	* bonobo/bonobo-dock-band.h : Use the  G_TYPE macros in place of
	  GTK_CHECK
	* bonobo/bonobo-dock-item-grip.h : ditto.
	* bonobo/bonobo-dock-item.h : ditto.
	* bonobo/bonobo-dock-layout.h : ditto.
	* bonobo/bonobo-dock.h : ditto.

	* bonobo/bonobo-dock-band.c : Port to G_DEFINE_TYPE in place of
	  GNOME_CLASS_BOILERPLATE
	* bonobo/bonobo-dock-item-grip.c : ditto.
	* bonobo/bonobo-dock-item.c : ditto.
	* bonobo/bonobo-dock.c : ditto.

	* configure.in  : bump gobject req to 2.3.2 to enable the use of
	  G_DEFINE_TYPE

2004-01-21  Fernando Herrera  <fherrera@onirica.com>

	* bonobo/bonobo-ui-init-gtk.c: Remove gxid-host and gxid-port 
	from POPT_ARGs (they are not supported on gtk 2.3)

2004-01-15  Michael Meeks  <michael@ximian.com>
